--- a/css/style.css
+++ b/css/style.css
@@ -21,22 +21,53 @@ main {
 #suelo {
     background-image: url("../img/suelolunar.png"); /* (i) imagen creada por mi utilizando Adobe Illustrator*/
     height: 30%;
-    position: relative;
+    /* position: relative; */
 }
 
+/******* Menu de navegación *******/ 
 nav {
 
 }
+
+#menu {
+    float: right;
+    top: 3%;
+    left: 1%;
+    width: 150px;
+    height: 60px;
+    color: white;
+    background-color: red;
+    padding: 2px;
+    margin: 10px;
+    text-align: left;
+}
+
+/******* Panel de control *******/ 
 
 aside {
 
 }
 
+#panel {
+    float: left;
+    top: 3%;
+    left: 1%;
+    width: 150px;
+    height: 60px;
+    color: white;
+    background-color: green;
+    padding: 2px;
+    margin: 10px;
+    text-align: right;
+}
+
+/******* Contenido ******/
+
 section {
 
 }
 
-#nave {
+.nave {
     position: relative;
     left: 45%; /* (?) no entiendo porque la distancia al reducir el tamaño del navegador no siempre corresponde al % que indicamos */
     top: 50%;
@@ -47,6 +78,67 @@ section {
     height: 150px;
     /* z-index: 1000;  superponemos capa de la nave para que se superponga al suelo */ 
 }
+
+
+
+  
+  
+  .listas {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+  }
+  
+  .pause {
+    background-image:url("../img/botones.png");
+    /*background-position: 0px 0px; */        /* (obs) por defecto este atributo está a 0px */
+    background-repeat: no-repeat;
+    background-size: 20px;
+    padding-left: 20px;
+    height: 20px;
+  }
+  .howtoplay {
+    background-image:url("../img/botones.png");
+    background-repeat: no-repeat;
+    background-position: 0px -20px;
+    background-size: 20px;
+    padding-left: 20px;
+    height: 20px;
+  }
+  .about {
+    background-image:url("../img/botones.png");
+    background-repeat: no-repeat;
+    background-position: 0px -40px;
+    background-size: 20px;
+    padding-left: 20px;
+    height: 20px;
+  
+  }
+  
+  .speed {
+    background-image: url("../img/estados.png");
+    background-repeat: no-repeat;
+    background-size: 40px;
+  }
+  
+  .fuel {
+    background-image: url("../img/estados.png");
+    background-repeat: no-repeat;
+    background-position: 0px -20px;
+    background-size: 40px;
+  }
+  
+  .height {
+    background-image: url("../img/estados.png");
+    background-repeat: no-repeat;
+    background-position: 0px -40px;
+    background-size: 40px;
+  }
+  
+  
+  p {
+    color: #b32715;
+  }
 
 footer {
 
