--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,36 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 main {
-    height: auto;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+    padding: 1em;
+    font-size: 20px;
+    border-width: 5px;
+    border-color: red;
+    border-style: dashed;
+    background-color: green;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: aqua;
+}
+
+a:active {
 
 }
+
 
 #fondo {
     background: url("../img/cieloestrellado.png") repeat; /* (i) imagen creada por mi utilizando Adobe Illustrator*/
@@ -21,126 +48,150 @@ main {
 #suelo {
     background-image: url("../img/suelolunar.png"); /* (i) imagen creada por mi utilizando Adobe Illustrator*/
     height: 30%;
-    /* position: relative; */
 }
 
-/******* Menu de navegación *******/ 
+/******* Menu de navegación *******/
 nav {
 
 }
 
-#menu {
+.menu {
     float: right;
+    text-align: right;
     top: 3%;
     left: 1%;
-    width: 150px;
-    height: 60px;
+    width: 200px;
+    height: 8rem;
     color: white;
-    background-color: red;
+    background-color: darkcyan;
     padding: 2px;
     margin: 10px;
-    text-align: left;
+    border-style: dotted;
+    border-color: red;
+    border-width: 2px;
 }
 
-/******* Panel de control *******/ 
+.menu li {
+    list-style: none;
+}
+
+/* (?) buscar la forma de centrar los textos de las listas en los menús */
+
+/* .menu a {
+    position: relative;
+} */
+
+.pause {
+    background-image:url("../img/botones.png");
+    background-repeat: no-repeat;
+    background-size: 40px;
+    height: 40px;
+}
+
+.howto {
+    background-image:url("../img/botones.png");
+    background-repeat: no-repeat;
+    background-size: 40px;
+    background-position: 0px -40px;
+    height: 40px;
+}
+
+.about {
+    background-image:url("../img/botones.png");
+    background-repeat: no-repeat;
+    background-size: 40px;
+    background-position: 0px -80px;
+    height: 40px;
+}
+
+/******* Panel de control *******/
 
 aside {
 
 }
 
-#panel {
+.panel {
     float: left;
+    text-align: left;
     top: 3%;
     left: 1%;
-    width: 150px;
-    height: 60px;
+    width: 200px;
+    height: 8rem;
     color: white;
-    background-color: green;
+    background-color: darkcyan;
     padding: 2px;
     margin: 10px;
-    text-align: right;
+    border-style: dotted;
+    border-color: red;
+    border-width: 2px;
 }
 
-/******* Contenido ******/
+.panel li {
+    list-style: none;
+}
+
+/* (?) buscar la forma de centrar los textos de las listas en los menús */
+
+/* .panel a {
+    padding-top: 2em;
+} */
+
+.speed {
+    background-image: url("../img/estados.png");
+    background-repeat: no-repeat;
+    background-size: 80px;
+    background-position: right;
+    background-position-y: 0px;
+    height: 40px;
+}
+
+.fuel {
+    background-image: url("../img/estados.png");
+    background-repeat: no-repeat;
+    background-size: 80px;
+    background-position: right;
+    background-position-y: -40px;
+    height: 40px;
+}
+
+.height {
+    background-image: url("../img/estados.png");
+    background-repeat: no-repeat;
+    background-size: 80px;
+    background-position: right;
+    background-position-y: -80px;
+    height: 40px;
+}
+
+/********** Contenido *********/
 
 section {
-
+    margin: 0 auto;
+    text-align: center;
+    color: yellow;
 }
 
 .nave {
-    position: relative;
-    left: 45%; /* (?) no entiendo porque la distancia al reducir el tamaño del navegador no siempre corresponde al % que indicamos */
-    top: 50%;
+    display: inline-block;
+    /* position: relative;  */
+    /* left: 50%; */ /* (?) no entiendo porque la distancia al reducir el tamaño del navegador no siempre corresponde al % que indicamos */
+    /* top: 50%; */
     background-image: url("../img/rocket.png");   /* (i) imagen modificar de la original obtenida desde https://commons.wikimedia.org/wiki/File:Emojione_1F680.svg */
     background-repeat: no-repeat;
     background-size: 5em;
+    background-origin: content-box;
     width: 4.9em;
-    height: 150px;
-    /* z-index: 1000;  superponemos capa de la nave para que se superponga al suelo */ 
+    /* height: 150px; */
+    height: 9.5em;
 }
 
-
-
-  
-  
-  .listas {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
-  }
-  
-  .pause {
-    background-image:url("../img/botones.png");
-    /*background-position: 0px 0px; */        /* (obs) por defecto este atributo está a 0px */
-    background-repeat: no-repeat;
-    background-size: 20px;
-    padding-left: 20px;
-    height: 20px;
-  }
-  .howtoplay {
-    background-image:url("../img/botones.png");
-    background-repeat: no-repeat;
-    background-position: 0px -20px;
-    background-size: 20px;
-    padding-left: 20px;
-    height: 20px;
-  }
-  .about {
-    background-image:url("../img/botones.png");
-    background-repeat: no-repeat;
-    background-position: 0px -40px;
-    background-size: 20px;
-    padding-left: 20px;
-    height: 20px;
-  
-  }
-  
-  .speed {
-    background-image: url("../img/estados.png");
-    background-repeat: no-repeat;
-    background-size: 40px;
-  }
-  
-  .fuel {
-    background-image: url("../img/estados.png");
-    background-repeat: no-repeat;
-    background-position: 0px -20px;
-    background-size: 40px;
-  }
-  
-  .height {
-    background-image: url("../img/estados.png");
-    background-repeat: no-repeat;
-    background-position: 0px -40px;
-    background-size: 40px;
-  }
-  
-  
-  p {
-    color: #b32715;
-  }
+/******** Pie de página *******/
 
 footer {
+
+}
+
+footer p {
 
 }
 
