--- a/css/mob.css
+++ b/css/mob.css
@@ -134,35 +134,38 @@ a:active {
     position: absolute;
     float: left;
     text-align: left;
-    top: 50%;
-    left: 1%;
-    width: 200px;
-    height: 8rem;
+    /* top: 50%; */
+    /* left: 0%; */
+    width: 100%;
+    height: 100%;
     color: white;
     background-color: darkcyan;
-    padding: 2px;
-    margin: 10px;
+    /* padding: 0px;
+    margin: 0; */
     border-style: dotted;
     border-color: red;
-    border-width: 2px;
+    /* border-width: 0px; */
     visibility: hidden;
 }
 
-.panel::after {
+.panel::before {
     content: url(https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/32px-Hamburger_icon.svg.png);
-    color: red; 
     background: white;
     visibility: visible;
     position: absolute;
-    top: -300px;
     height: 30px;
 }
 
 .panel:active {
     visibility: visible;
+    z-index: 1;
 }
 
-
+.panel ul {
+    padding-top: 30%;
+    /* (i) para centrar el titulo de los indicadores en el menú de movil. */
+    /* text-align: center; */ 
+}
 
 .panel li {
     list-style: none;
