añadiendo media query

--- a/css/mob.css
+++ b/css/mob.css
@@ -236,11 +236,12 @@ article {
 }
 
 /******** Pie de página *******/
-
+/* 
 footer {
-    text-align: center;
-}
+    
+} */
 
 footer p {
+    text-align: center;
 }
 
