--- a/css/pc.css
+++ b/css/pc.css
@@ -77,9 +77,9 @@ a:active {
 
 /* (?) buscar la forma de centrar los textos de las listas en los menús */
 
-/* .menu a {
-    position: relative;
-} */
+.menu a {
+    line-height: 40px;
+}
 
 .play {
     background-image:url("../img/botones.png");
