--- a/css/pc.css
+++ b/css/pc.css
@@ -1,207 +1,1 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-}
-
-main {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-h1 {
-    color: white;
-    text-align: center;
-    padding: 1em;
-    font-size: 20px;
-    border-width: 5px;
-    border-color: red;
-    border-style: dashed;
-    background-color: green;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-}
-
-a:hover {
-    color: aqua;
-}
-
-a:active {
-    color: blueviolet;
-}
-
-
-#fondo {
-    background: url("../img/cieloestrellado.png") repeat; /* (i) imagen creada por mi utilizando Adobe Illustrator*/
-    height: 70%;
-}
-
-#suelo {
-    background-image: url("../img/suelolunar.png"); /* (i) imagen creada por mi utilizando Adobe Illustrator*/
-    height: 30%;
-}
-
-/******* Menu de navegación *******/
-/* nav {
-
-} */
-
-.menu {
-    float: right;
-    text-align: right;
-    top: 3%;
-    left: 1%;
-    width: 200px;
-    height: 8rem;
-    color: white;
-    background-color: darkcyan;
-    padding: 2px;
-    margin: 10px;
-    border-style: dotted;
-    border-color: red;
-    border-width: 2px;
-}
-
-.menu li {
-    list-style: none;
-}
-
-/* (?) buscar la forma de centrar los textos de las listas en los menús */
-
-.menu a {
-    line-height: 40px;
-}
-
-.play {
-    background-image:url("../img/botones.png");
-    background-repeat: no-repeat;
-    background-size: 40px;
-    height: 40px;
-}
-
-.howto {
-    background-image:url("../img/botones.png");
-    background-repeat: no-repeat;
-    background-size: 40px;
-    background-position: 0px -40px;
-    height: 40px;
-}
-
-.about {
-    background-image:url("../img/botones.png");
-    background-repeat: no-repeat;
-    background-size: 40px;
-    background-position: 0px -80px;
-    height: 40px;
-}
-
-/******* Panel de control *******/
-
-/* aside {
-
-} */
-
-.panel {
-    float: left;
-    text-align: left;
-    top: 3%;
-    left: 1%;
-    width: 200px;
-    height: 8rem;
-    color: white;
-    background-color: darkcyan;
-    padding: 2px;
-    margin: 10px;
-    border-style: dotted;
-    border-color: red;
-    border-width: 2px;
-}
-
-.panel li {
-    list-style: none;
-}
-
-/* (?) buscar la forma de centrar los textos de las listas en los menús */
-
-/* .panel a {
-    padding-top: 2em;
-} */
-
-.speed {
-    background-image: url("../img/estados.png");
-    background-repeat: no-repeat;
-    background-size: 80px;
-    background-position: right;
-    background-position-y: 0px;
-    height: 40px;
-}
-
-.fuel {
-    background-image: url("../img/estados.png");
-    background-repeat: no-repeat;
-    background-size: 80px;
-    background-position: right;
-    background-position-y: -40px;
-    height: 40px;
-}
-
-.height {
-    background-image: url("../img/estados.png");
-    background-repeat: no-repeat;
-    background-size: 80px;
-    background-position: right;
-    background-position-y: -80px;
-    height: 40px;
-}
-
-/********** Contenido *********/
-
-section {
-    /* margin: 0 auto; */
-    text-align: center;
-    color: yellow;
-    /* (?) buscar forma de poner un recuardo en el centro que sea semi transparente y que contenga los textos */
-    /* background-color: darkslategrey; */
-    margin-top: 60px;
-}
-
-article {
-    color: white;
-    height: 200px;
-}
-
-
-.nave {
-    display: inline-block;
-    /* position: relative;  */
-    /* left: 50%; */ /* (?) no entiendo porque la distancia al reducir el tamaño del navegador no siempre corresponde al % que indicamos */
-    /* top: 50%; */
-    background-image: url("../img/rocket.png");   /* (i) imagen modificar de la original obtenida desde https://commons.wikimedia.org/wiki/File:Emojione_1F680.svg */
-    background-repeat: no-repeat;
-    background-size: 5em;
-    background-origin: content-box;
-    width: 4.9em;
-    /* height: 150px; */
-    height: 9.5em;
-}
-
-/******** Pie de página *******/
-
-/* footer {
-
-}
-*/
-
-footer p {
-    text-align: center;
-}
-
+a,h1{color:#fff}.menu li,.panel li{list-style:none}a,abbr,acronym,address,applet,b,big,blockquote,body,caption,center,cite,code,dd,del,dfn,div,dl,dt,em,fieldset,font,form,h1,h2,h3,h4,h5,h6,html,i,iframe,img,ins,kbd,label,legend,li,object,ol,p,pre,q,s,samp,small,span,strike,strong,sub,sup,tt,u,ul,var{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:0 0}main{position:absolute;height:100%;width:100%;font-family:Verdana,Geneva,Tahoma,sans-serif}h1{text-align:center;padding:1em;font-size:20px;border-width:5px;border-color:red;border-style:dashed;background-color:green}a{text-decoration:none}a:hover{color:#0ff}a:active{color:#8a2be2}#fondo{background:url(../img/cieloestrellado.png);height:70%}.menu,.panel{top:3%;left:1%;width:200px;background-color:#008b8b;padding:2px;margin:10px;border-style:dotted;border-color:red;border-width:2px;color:#fff}#suelo{background-image:url(../img/suelolunar.png);height:30%}.menu{float:right;text-align:right;height:8rem}.about,.howto,.play{background-image:url(../img/botones.png);background-repeat:no-repeat;background-size:40px;height:40px}.menu a{line-height:40px}.howto{background-position:0 -40px}.about{background-position:0 -80px}.panel{float:left;text-align:left;height:8rem}footer p,section{text-align:center}.fuel,.height,.speed{background-image:url(../img/estados.png);background-size:80px;background-position:right;height:40px;background-repeat:no-repeat}.speed{background-position-y:0}.fuel{background-position-y:-40px}.height{background-position-y:-80px}section{color:#ff0;margin-top:60px}article{color:#fff;height:200px}.nave{display:inline-block;background-image:url(../img/rocket.png);background-repeat:no-repeat;background-size:5em;background-origin:content-box;width:4.9em;height:9.5em}
